# etlegacy-server

./: .gitignore  .gitmodules  CLAUDE.md  CUSTOMSOUND-PLAN.md  ETMAN-SOUNDS-PLAN.md  FIRING_RATE_INVESTIGATION.md  HIERARCHICAL_MENU_PROGRESS.md  README.md  RICK-ROLL-MODE.md
configs/: crazymode.cfg  maplist.txt  server.cfg
configs/mapconfigs/: ctf_face_b1.cfg  example_stock.cfg  mml_minastirith_fp3.cfg  snatch3.cfg
docs/: ADMIN_COMMANDS_IMPLEMENTATION.md  DYNAMIC_MAP_LOADER_SPEC.md  DYNAMIC_SOUND_MENUS.md  ETMAN-MENU-IMPLEMENTATION.md  FEATURE_KILL_ANNOUNCEMENTS.md  FEATURE_QUICK_SOUND_COMMANDS.md  JAYMOD-FEATURES-TO-PORT.md  PANZERFEST_SURVIVAL_IMPLEMENTATION.md  PLAYLIST-SNAPSHOT-PLAN.md  SERVER-SOUND-MENUS-IMPLEMENTATION.md  VOICE-SERVER-SOUNDS-UPGRADE.md  VOICE_CHAT_IMPLEMENTATION.md  VOICE_CHAT_SESSION_PROMPT.md
etman-server/: CMakeLists.txt  db_manager.c  db_manager.h  etman-server.service  main.c  sound_manager.c  sound_manager.h
etman-server/admin/: admin.c  admin.h  commands.c
etpanel/: SOUND_CLIP_EDITOR_FEATURE.md  deploy.sh
etpanel/backend/: .env.example  package-lock.json  package.json  tsconfig.json
etpanel/backend/src/: config.ts  index.ts
etpanel/backend/src/db/: index.ts  schema.ts
etpanel/backend/src/db/migrations/: 0000_sleepy_smiling_tiger.sql  0001_large_stature.sql  0002_add_bot_stats.sql  0002_bitter_otto_octavius.sql  0003_add_display_name.sql  0004_drop_opponent_name_columns.sql  0004_orange_marvel_apes.sql  0005_add_sound_menus.sql  0005_hierarchical_sound_menus.sql  0005_huge_albert_cleary.sql  0006_add_playlist_to_menu_items.sql  0006_nervous_klaw.sql  0007_shiny_mister_fear.sql  0008_glorious_black_bolt.sql  0009_lazy_deadpool.sql
etpanel/backend/src/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  _journal.json
etpanel/backend/src/middleware/: auth.ts
etpanel/backend/src/routes/: admin.ts  auth.ts  browser.ts  config.ts  console.ts  game.ts  logs.ts  players.ts  schedule.ts  server-admin.ts  server.ts  settings.ts  sounds.ts  users.ts
etpanel/backend/src/services/: consoleTail.ts  gameEvents.ts  panelMessageTail.ts  rcon.ts
etpanel/backend/src/utils/: audio.ts
etpanel/backend/src/websocket/: index.ts
etpanel/frontend/: package-lock.json  package.json  tailwind.config.js
etpanel/frontend/src/: App.tsx  index.css
etpanel/frontend/src/api/: client.ts
etpanel/frontend/src/components/: AudioPlayer.tsx  Layout.tsx  SoundClipEditor.tsx  SoundMenuEditor.tsx
etpanel/frontend/src/pages/: Admin.tsx  Chat.tsx  Commands.tsx  Config.tsx  Console.tsx  Dashboard.tsx  GameRegister.tsx  Login.tsx  Logs.tsx  MySounds.tsx  PlayerDetail.tsx  Players.tsx  Playlists.tsx  PrivateSounds.tsx  PublicSounds.tsx  Schedule.tsx  Server.tsx  ServerBrowser.tsx  Settings.tsx  Users.tsx
etpanel/frontend/src/stores/: auth.ts
etpanel/frontend/src/utils/: etColors.tsx
etpanel/shared/: types.ts
lua/: main.lua  map_rotation.lua  panzerfest_survival.lua  rocket_mode.lua
lua/rickroll/: config.lua  effects.lua  init.lua  selection.lua  state.lua  trigger.lua  ui.lua
mapscripts/: snatch3.script
omni-bot/: README.md
omni-bot/et/scripts/: et_autoexec.gm
omni-bot/et/user/: omni-bot.cfg
rickroll/: README.md
rickroll/scripts/: rickroll.shader
scripts/: build-all.sh  build-rickroll-pk3.sh  build.sh  check-connections.sh  deploy.sh  etpanel-relay.sh  map_switch.sh  publish.sh  server-monitor.sh  start-server.sh
sql/: admin_schema.sql
src/: CMakeLists.txt
src/cmake/: ETLSetupFeatures.cmake
src/etmain/scripts/: wm_allies_chat.voice  wm_axis_chat.voice
src/etmain/ui/: ingame_main.menu  ingame_serverinfo.menu  menus.txt  options.menu  options_controls.menu  wm_quickmessage.menu  wm_quickmessageAlt.menu
src/src/cgame/: cg_consolecmds.c  cg_customsound.c  cg_customsound.h  cg_cvars.c  cg_debriefing.c  cg_draw.c  cg_ents.c  cg_etman.c  cg_etman.h  cg_event.c  cg_local.h  cg_main.c  cg_newDraw.c  cg_players.c  cg_predict.c  cg_public.h  cg_rickroll.c  cg_rickroll.h  cg_servercmds.c  cg_syscalls.c  cg_view.c  cg_voice.c  cg_voice.h  cg_weapons.c
src/src/client/: cl_cgame.c  cl_main.c
src/src/game/: bg_classes.c  bg_misc.c  bg_pmove.c  bg_public.h  g_active.c  g_client.c  g_cmds.c  g_combat.c  g_cvars.c  g_cvars.h  g_etman.c  g_etman.h  g_etpanel.c  g_etpanel.h  g_local.h  g_lua.c  g_lua.h  g_main.c  g_misc.c  g_missile.c  g_svcmds.c  g_weapon.c
src/src/server/: sv_ccmds.c  sv_init.c
src/src/ui/: ui_main.c  ui_shared.c  ui_shared.h
voice-server/: CMakeLists.txt  build.sh  db_manager.c  db_manager.h  main.c  sound_manager.c  sound_manager.h  voice-server.service  voice_server
voice-test/: CMakeLists.txt  build.sh  client.c  server.c
waypoints/: ctf_face_b1.gm  mml_minastirith_fp3.gm  mml_minastirith_fp3_goals.gm
